test/positive/feature_package.java

package dovs.joos.features;

public class feature_package {
  public feature_package() {}
  protected int x;
}

