test/negative/feature_packageprivatefields.java

package dovs.joos.features;

public class feature_packageprivatefields {
  /* package private */ int x;
  public feature_packageprivatefields() {}
}

